Landing Page Modified

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,11 @@
 
   <!-- Template Main CSS File -->
   <link href="/static/css/style.css" rel="stylesheet">
+  <link
+  href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+  rel="stylesheet"
+/>
+
 
   <link rel="icon" href="/static/img/favicon.png">
 
@@ -53,13 +58,10 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
-          <h1>IndustryXpert</h1>
+          <h1>Empowering Industrial Safety & Security</h1>
           <h2>Enhancing Safety and Efficiency in Industrial Environments.</h2>
-          <p style="color:whitesmoke;">We are committed to transforming safety protocols and optimizing efficiency in
-            industrial settings. Our
-            innovative web-based application utilizes cutting-edge
-            technology to not only ensure a safer work environment but also enhance equipment performance and
-            reliability.</p>
+          <p style="color: #607d8b;font-weight: 600;font-size: 16px; font-family:'Merriweather';font-style: normal;"> Our innovative web-based application utilizes cutting-edge
+            technology to not only ensure a safer work environment but also enhance equipment performance.</p>
           <!--div class="d-flex justify-content-center justify-content-lg-start">
             <a href="/upload" class="btn-get-started scrollto">Ampilify Motion</a>
           </div-->
@@ -146,14 +148,14 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h3>Our Mission</h3>
+            <br><br>
+            <h3>Our Mission:</h3>
             <p>
               Our mission is clear: to redefine safety in industrial environments through
               innovation, empowerment, and a relentless commitment to people. We see safety not as a checkbox, but as an
               art form, meticulously crafted with the latest technologies and creative thinking. Our platform empowers
               organizations to take control of their safety destiny, fostering a culture where every individual feels
-              valued and protected. By building bridges between technology and humanity, innovation and tradition, we're
-              not just preventing accidents; we're shaping a safer, smarter future for all.
+              valued and protected.
             </p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
@@ -166,20 +168,56 @@
               <li><i class="ri-check-double-line"></i><strong>Innovation at its Finest:</strong> We're not just another
                 safety app;
                 we're pioneers of progress. With our relentless pursuit of innovation, we're constantly pushing the
-                boundaries of what's possible in industrial safety. When you choose us you're choosing to
-                stay ahead of the curve.</li>
+                boundaries of what's possible in industrial safety.</li>
               <li><i class="ri-check-double-line"></i> <strong>Simplified Safety:</strong> Say goodbye to complex safety
                 protocols and
-                hello to simplicity. Our platform is designed with user-friendliness in mind, ensuring that everyone
-                from the tech-savvy to the tech-shy can navigate it with ease. Safety has never been this simple</li>
+                hello to simplicity. Our platform is designed with user-friendliness in mind. Safety has never been this simple....<a href="#Features" class="btn-learn-more">Learn More</a></li>
+
+                
             </ul>
-            <a href="#Features" class="btn-learn-more">Learn More</a>
+            
           </div>
         </div>
 
       </div>
     </section>
 
+
+
+       <!-- ======= Why Us Section ======= -->
+       <section id="why-us" class="why-us section-bg">
+        
+        <div class="section-title">
+          <h2>Motion Amplification</h2>
+        </div>
+        <div class="container-fluid" data-aos="fade-up">
+  
+          <div class="row">
+  
+            <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
+  
+              <div class="content">
+                <h3><strong>Unlock Hidden Motion:</strong>Introducing Our Motion Amplification Solution</h3>
+                <p>
+                  our Motion Amplification Tool provides a new dimension of clarity, enabling you to uncover valuable information and optimize performance like never before.
+                </p>
+              </div>
+  
+              
+  
+            </div>
+  
+            <div class="col-lg-5 align-items-stretch order-1 order-lg-2 video" style='background-clip: content-box;' data-aos="zoom-in" data-aos-delay="150">
+              <video autoplay loop muted playsinline>
+                  <source src="/static/img/motionamp.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+              </video>
+          </div>
+          
+          </div>
+  
+        </div>
+      </section><!-- End Why Us Section -->
 
 
 
@@ -198,12 +236,12 @@
     </footer><!-- End Footer -->
 
     <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-turn-up"></i></a>
 
 
     <!-- Template Main JS File -->
     <script src="/static/js/main.js"></script>
+    <script src="https://kit.fontawesome.com/ec53c9ed31.js" crossorigin="anonymous"></script>
 
 </body>
 
