--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,8 @@
   <!-- Template Main CSS File -->
   <link href="/static/css/style.css" rel="stylesheet">
   <link
-  href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-  rel="stylesheet"
-/>
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet" />
 
 
   <link rel="icon" href="/static/img/favicon.png">
@@ -41,7 +40,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="">Home</a></li>
+          <li><a class="nav-link scrollto" href="/upload">Motion Amplification</a></li>
           <li><a class="nav-link scrollto" href="#Features">Features</a></li>
           <li><a class="getstarted scrollto" href="/login_page">Login</a></li>
         </ul>
@@ -58,13 +58,11 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
-          <h1>Empowering Industrial Safety & Security</h1>
-          <h2>Enhancing Safety and Efficiency in Industrial Environments.</h2>
-          <p style="color: #607d8b;font-weight: 600;font-size: 16px; font-family:'Merriweather';font-style: normal;"> Our innovative web-based application utilizes cutting-edge
-            technology to not only ensure a safer work environment but also enhance equipment performance.</p>
-          <!--div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="/upload" class="btn-get-started scrollto">Ampilify Motion</a>
-          </div-->
+          <h1><br><br>Enhancing Safety and Efficiency in Industrial Environments.</h1>
+          <h2><br>
+            Our innovative web-based application utilizes cutting-edge
+            technology to not only ensure a safer work environment but also enhance equipment performance.<br><br>
+          </h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Know More</a>
           </div>
@@ -138,6 +136,52 @@
 
 
     <!--  Motion Section -->
+    <!-- ======= Why Us Section ======= -->
+    <section id="why-us" class="why-us section-bg">
+
+      <div class="section-title">
+        <h2>Motion Amplification</h2>
+      </div>
+      <div class="container-fluid" data-aos="fade-up">
+
+        <div class="row">
+
+          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
+
+            <div class="content">
+              <h3><strong>Unlock Hidden Motion:</strong>Introducing Our Motion Amplification Solution</h3>
+              <p>
+                Motion amplification is a groundbreaking feature of our app that enhances equipment inspection
+                processes by revealing subtle movements that are often imperceptible to the naked eye.
+              </p>
+              <h4>Benifits</h4>
+              <li><i class="ri-check-double-line"></i><strong>Early Detection:</strong> By amplifying subtle
+                movements, our platform enables early detection of potential issues, preventing unexpected breakdowns
+                and minimizing downtime.</li>
+              <li><i class="ri-check-double-line"></i><strong>Cost Savings: </strong> Proactive maintenance reduces the
+                need for costly emergency repairs and extends the lifespan of machinery, resulting in significant cost
+                savings for organizations.</li>
+                <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
+                data-aos="fade-up" data-aos-delay="200">
+                <div class="d-flex justify-content-center justify-content-lg-start">
+                  <a href="/upload" class="btn-get-started scrollto">Try Now..</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 video" style='background-clip: content-box;'
+            data-aos="zoom-in" data-aos-delay="150">
+            <video autoplay loop muted playsinline>
+              <source src="/static/img/motionamp.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
 
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
@@ -171,56 +215,17 @@
                 boundaries of what's possible in industrial safety.</li>
               <li><i class="ri-check-double-line"></i> <strong>Simplified Safety:</strong> Say goodbye to complex safety
                 protocols and
-                hello to simplicity. Our platform is designed with user-friendliness in mind. Safety has never been this simple....<a href="#Features" class="btn-learn-more">Learn More</a></li>
+                hello to simplicity. Our platform is designed with user-friendliness in mind. Safety has never been this
+                simple....<a href="#Features" class="btn-learn-more">Learn More</a></li>
 
-                
+
             </ul>
-            
+
           </div>
         </div>
 
       </div>
     </section>
-
-
-
-       <!-- ======= Why Us Section ======= -->
-       <section id="why-us" class="why-us section-bg">
-        
-        <div class="section-title">
-          <h2>Motion Amplification</h2>
-        </div>
-        <div class="container-fluid" data-aos="fade-up">
-  
-          <div class="row">
-  
-            <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
-  
-              <div class="content">
-                <h3><strong>Unlock Hidden Motion:</strong>Introducing Our Motion Amplification Solution</h3>
-                <p>
-                  our Motion Amplification Tool provides a new dimension of clarity, enabling you to uncover valuable information and optimize performance like never before.
-                </p>
-              </div>
-  
-              
-  
-            </div>
-  
-            <div class="col-lg-5 align-items-stretch order-1 order-lg-2 video" style='background-clip: content-box;' data-aos="zoom-in" data-aos-delay="150">
-              <video autoplay loop muted playsinline>
-                  <source src="/static/img/motionamp.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-              </video>
-          </div>
-          
-          </div>
-  
-        </div>
-      </section><!-- End Why Us Section -->
-
-
-
 
 
 
@@ -236,7 +241,8 @@
     </footer><!-- End Footer -->
 
     <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-turn-up"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="fa-solid fa-arrow-turn-up"></i></a>
 
 
     <!-- Template Main JS File -->
