--- a/templates/complain_form.html
+++ b/templates/complain_form.html
@@ -1,110 +1,74 @@
-<form
-  action="/{{id}}/submit_complaint"
-  method="post"
-  enctype="multipart/form-data"
->
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link
-        href="https://cdn.lineicons.com/4.0/lineicons.css"
-        rel="stylesheet"
-      />
-      <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-        crossorigin="anonymous"
-      />
-      <title>Complain Form</title>
-      <link rel="stylesheet" href="/static/css/complain.css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-        rel="stylesheet"
-      />
-      <script src="https://kit.fontawesome.com/ec53c9ed31.js" crossorigin="anonymous"></script>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
 
-    <body>
-      <!-- <h1>{{username}}</h1> -->
-      <section id="formpart" class="formpart">
-        <div class="container mt-5">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <title>Complain Form</title>
+  <link rel="stylesheet" href="/static/css/complain.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ec53c9ed31.js" crossorigin="anonymous"></script>
+  <style>
+    /* Add custom styles here */
+    #formpart {
+      margin-top: 50px;
+      /* Adjust as needed */
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row justify-content-end">
+      <div class="col-md-6">
+        <section id="formpart" class="formpart">
           <h2 class="text-center mb-4">Raise Your Complain</h2>
-          <div class="row justify-content-center">
-            <div class="col-md-6">
-              <form
-                action="/{{id}}/submit_complaint"
-                method="post"
-                enctype="multipart/form-data"
-              >
-                <div class="form-group">
-                  <label for="fullName">Full Name</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="fullName"
-                    name="fullName"
-                    placeholder=  "Enter your full name"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="email">Email address</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="email"
-                    name="email"
-                    aria-describedby="emailHelp"
-                    placeholder="Enter email"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="alertType">Select the alert type</label>
-                  <select class="form-control" id="alertType" name="alertType">
-                    <option value="Report an Alert">Report an Alert</option>
-                    <option value="Normal Complaint">Normal Complaint</option>
-                    <option value="Harassment reporting">
-                      Alert reporting
-                    </option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="description">Elaborate your Concern</label>
-                  <textarea
-                    class="form-control"
-                    id="description"
-                    name="description"
-                    rows="3"
-                    placeholder="Share your Concern"
-                  ></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="file">Upload file</label><br />
-                  <input
-                    type="file"
-                    class="form-control-file"
-                    id="file"
-                    name="file"
-                  />
-                </div>
-                <br />
-                <button type="submit" class="btn btn-primary">Submit  <i class="fa-solid fa-paper-plane"></i> </button>
-              </form>
+          <form action="/{{id}}/submit_complaint" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+              <label for="fullName">Full Name</label>
+              <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter your full name">
             </div>
-          </div>
-        </div>
-      </section>
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
+                placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="alertType">Select the alert type</label>
+              <select class="form-control" id="alertType" name="alertType">
+                <option value="Report an Alert">Report an Alert</option>
+                <option value="Normal Complaint">Normal Complaint</option>
+                <option value="Harassment reporting">Alert reporting</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="description">Elaborate your Concern</label>
+              <textarea class="form-control" id="description" name="description" rows="3"
+                placeholder="Share your Concern"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="file">Upload file</label><br>
+              <input type="file" class="form-control-file" id="file" name="file">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary">Submit <i class="fa-solid fa-paper-plane"></i> </button>
+          </form>
+        </section>
+      </div>
+    </div>
+  </div>
 
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"
-      ></script>
-    </body>
-  </html>
-</form>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
