--- a/templates/dash.html
+++ b/templates/dash.html
@@ -15,18 +15,28 @@
 <body>
     <div class="wrapper">
         {% include 'sidebar.html' %}
-        <div class="main p-3">
+        <div class="main p-3 d-flex justify-content-center align-items-center">
             <div class="text-center">
                 <div id="live-feeds">
-                    {% for camera in cameras %}
-                        <h2>Camera:  {{ camera.cam_id }}</h2>
-                        <iframe src="/video_feed/{{ camera.cam_id }}" width="1000" height="500"></iframe>
-                    {% endfor %}
+                    {% if cameras %}
+                        {% for camera in cameras %}
+                            <h3>Camera: {{ camera.cam_id }}</h3>
+                            <div class="d-flex justify-content-center">
+                                <iframe src="/video_feed/{{ camera.cam_id }}" width="1000" height="500"></iframe>
+                            </div>
+                        {% endfor %}
+                    {% else %}
+                    <div class="alert alert-dark" role="alert">
+                        No cameras Found!!.. 
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
-    
+</body>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
