--- a/static/css/videoUpload.css
+++ b/static/css/videoUpload.css
@@ -5,52 +5,79 @@
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
 }
-body
+
+section
 {
-    background-color:  #37517e;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
 }
-#content
+section .imgBx
 {
-    margin-top: 200px;
+    position: relative;
+    width: 50%;
+    height: 100%;
 }
-a
+section .imgBx:before
 {
-    text-decoration: none;
-    color: #11999e;
-  
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    mix-blend-mode: screen;
 }
-a:hover
-{
-    color: #eaf6f6;
+section .imgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+    object-fit: cover;
 }
 
+section .contentBx
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
 
-
-
-/* Style for the form label */
-.form-label {
-    /* font-size: 1.2rem; 
-    font-weight: bold; 
-    color: #333;  */
-    color:white;
+section .contentBx .formBx{
+    width: 50%;
+}
+section .contentBx .formBx h2{
+    color: rgb(39, 67, 137);  /*#607d8b;*/
     font-weight: 600;
     font-size: 1.5em;
     text-transform: uppercase;
     margin-bottom: 20px;
-    border-bottom: 4px solid grey;
+    border-bottom: 4px solid rgb(159, 164, 192);         /*#ff4584;*/
     display: inline-block;
     letter-spacing: 1px;
-    
-  }
-  #msg
-  {
-    margin-top: 20px;
-  }
-  /* Style for the form button */
-  .btn {
-    display: block; /* Make it a block element */
-    margin: 0 auto; /* Center it horizontally */
-    margin-top: 20px; /* Add some top margin */
+
+}
+section .contentBx .formBx .inputBx
+{
+    margin-bottom: 20px;
+
+}
+.form-label{
+    font-size: 20px;
+    margin-bottom: 5px;
+    display: inline-block;
+    color: #607d8b;
+    font-weight: 500;
+    letter-spacing: 1px;
+
+}
+
+section .contentBx .formBx .inputBx input{
     width: 100%;
     padding: 10px 20px;
     outline: none;
@@ -58,18 +85,56 @@ a:hover
     border: 1px solid #607d8b;
     font-size: 16px;
     letter-spacing: 1px;
-    color: black;
+    color: #607d8b;
     background: transparent;
     border-radius: 30px;
-    background-color: white
-  }
-  
-  /* Optional: Style for the container */
-  .container {
-    max-width: 600px; /* Limit container width */
-    margin: 0 auto; /* Center container horizontally */
-  }
+
+}
+.btn
+{
+    background: rgb(11, 67, 179);      /*#ff4584;*/
+    color: #fff;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
+    width: 100%;
+
+   
+}
+.btn:hover
+{
+    background:rgb(129, 152, 197);    /*#f53677 ;*/
+    color: white;
+}
+
+#formFile
+{
+  font-size: 17px;
+  margin-bottom: 5px;
+  display: inline-block;
+  color: #607d8b;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+section .contentBx .formBx .inputBx p{
+    color: #607d8b;
+}
+section .contentBx .formBx .inputBx p a{
+    color: #42b6ff;
+    text-decoration: none;
+}
 
 
-  
+
+
+.form-check {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Adjust the gap as needed */
+    display: inline-block;
+    margin-right: 5px;
+    color: #607d8b;
+  }
   
