--- a/templates/VideoUpload.html
+++ b/templates/VideoUpload.html
@@ -9,11 +9,68 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ec53c9ed31.js" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="/static/css/videoUpload.css"> -->
     <link rel="stylesheet" href="/static/css/videoUpload.css">
 </head>
 
 <body>
-  <div id="msg" class="container my-4">
+  <section>
+         
+    <div class="imgBx">
+        <img src="/static/img/upload.svg">
+    </div>
+    <div class="contentBx">
+            <div class="formBx">
+              <div id="msg" class="container my-4">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+            
+                {% for category, message in messages %}
+                <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                  <strong>Message!</strong> {{ message | safe}}
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            
+                {% endif %}
+                {% endwith %}
+              </div>
+                <h2>Amplify Motion</h2>
+                <div class="container my-4">
+                  <form action="/upload_file" method="post" enctype="multipart/form-data">
+              
+                    <div id="content" class="mb-3">
+                      <label for="formFile" class="form-label">Select a video file to upload</label>
+                      <input class="form-control" type="file" name="file" id="formFile">
+                    </div>
+                    <button type="submit" class="btn"><i class="fa-solid fa-upload"></i>  Upload</button>
+              
+                  </form>
+                </div> 
+            </div> 
+    </div>
+</section>
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
+
+</body>
+
+
+</html>
+
+
+  <!-- <div id="msg" class="container my-4">
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
 
@@ -37,16 +94,4 @@
       <button type="submit" class="btn">Upload</button>
 
     </form>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
-
-</body>
-
-
-</html>
+  </div> -->
