--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ec53c9ed31.js" crossorigin="anonymous"></script>
  <link rel="stylesheet" href="/static/css/manage_cam.css">
 
 
@@ -57,7 +58,7 @@
                             name="password">
                         </div>
                         <div class="inputBx">
-                            <input type="submit" value="Sign in" name="">
+                            <input type="submit" value= "Sign in" name="">
                         </div>
                         <div class="inputBx">
                            <p>Don't have an account? <a href="register_page">Sign up</a></p>
