--- a/templates/VideoUpload.html
+++ b/templates/VideoUpload.html
@@ -18,7 +18,7 @@
   <section>
          
     <div class="imgBx">
-        <img src="/static/img/upload.svg">
+        <img src="/static/img/bg_Upload.jpg">
     </div>
     <div class="contentBx">
             <div class="formBx">
