--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
             technology to ensure a safer and secure working environment.<br>
           </h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Know More</a>
+            <a href="#Features" class="btn-get-started scrollto">Know More</a>
           </div>
         </div>
 
