--- a/templates/VideoUpload.html
+++ b/templates/VideoUpload.html
@@ -21,7 +21,7 @@
         <img src="/static/img/bg_Upload.jpg">
     </div>
     <div class="contentBx">
-            <div class="formBx">
+            <div class="formBx" style="width: 80%;">
               <div id="msg" class="container my-4">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
