--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -21,7 +21,7 @@
         <!--Add your code here-->
         <div class="container">
             <h1>All Complaints</h1>
-            <p>Share <a href="/complain/{{user.id}}" target="_blank">this</a> form in your organization</p>
+            <p>Share your unique form <a href="/complain/{{user.id}}" target="_blank">link</a> with your organization.</p>
             {% if complaints|length==0 %}
             <div class="alert alert-dark" role="alert">
                 No complaints Found!!
